--- a/.github/workflows/windows.yml
+++ b/.github/workflows/windows.yml
@@ -18,14 +18,11 @@ jobs:
       matrix:
         qt_ver: [5.14.2]
         qt_target: [desktop]
-        qt_arch: [win64_msvc2019_64, win32_msvc2019]
+        qt_arch: [win64_msvc2019_64]
         include:
           - qt_arch: win64_msvc2019_64
             msvc_arch: x64
             qt_arch_install: msvc2019_64
-          - qt_arch: win32_msvc2019
-            msvc_arch: x86
-            qt_arch_install: msvc2019
     env:
       targetName: q5Go
     steps:
